{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 50,
  "lineage": "ad17f0a0-ff2f-a721-3d17-b95e4ad5bf85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:333264324944:instance/i-00c126e8febf57c38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c126e8febf57c38",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b40e9c24ff085c72",
            "private_dns": "ip-172-31-28-66.ec2.internal",
            "private_ip": "172.31.28.66",
            "public_dns": "ec2-75-101-192-155.compute-1.amazonaws.com",
            "public_ip": "75.101.192.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0abe455d63acd40c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4dc1e300",
            "tags": {
              "name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a49bcc3420812c2"
            ]
          },
          "dependencies": [
            "aws_security_group.estudo-acesso-ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:333264324944:instance/i-0292121c91df486e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0292121c91df486e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0d2d51e8632b8fd",
            "private_dns": "ip-172-31-18-216.ec2.internal",
            "private_ip": "172.31.18.216",
            "public_dns": "ec2-3-80-190-244.compute-1.amazonaws.com",
            "public_ip": "3.80.190.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03ecbf4dd92f36558",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4dc1e300",
            "tags": {
              "name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a49bcc3420812c2"
            ]
          },
          "dependencies": [
            "aws_security_group.estudo-acesso-ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:333264324944:instance/i-05ecf5bba2e38f318",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ecf5bba2e38f318",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bdc763796b1f938",
            "private_dns": "ip-172-31-19-128.ec2.internal",
            "private_ip": "172.31.19.128",
            "public_dns": "ec2-34-224-37-245.compute-1.amazonaws.com",
            "public_ip": "34.224.37.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0662ca2d91d39d97c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4dc1e300",
            "tags": {
              "name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a49bcc3420812c2"
            ]
          },
          "dependencies": [
            "aws_security_group.estudo-acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e472ba40eb589f49",
            "arn": "arn:aws:ec2:us-east-1:333264324944:instance/i-0f7f3eca002d3d2c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7f3eca002d3d2c5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e2c1336cfd0b6a6",
            "private_dns": "ip-172-31-20-191.ec2.internal",
            "private_ip": "172.31.20.191",
            "public_dns": "ec2-52-200-215-145.compute-1.amazonaws.com",
            "public_ip": "52.200.215.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd314e5da98577b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4dc1e300",
            "tags": {
              "name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a49bcc3420812c2"
            ]
          },
          "dependencies": [
            "aws_security_group.estudo-acesso-ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0231217be14a6f3ba",
            "arn": "arn:aws:ec2:us-east-2:333264324944:instance/i-0a6b30499bfed4960",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a6b30499bfed4960",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a511747561f8053",
            "private_dns": "ip-172-31-3-88.us-east-2.compute.internal",
            "private_ip": "172.31.3.88",
            "public_dns": "ec2-3-136-20-85.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.20.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08bbdeaa958321eb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7e389615",
            "tags": {
              "name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06071ebae5720cddc"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.estudo-acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0231217be14a6f3ba",
            "arn": "arn:aws:ec2:us-east-2:333264324944:instance/i-0ef2fdea28594990b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef2fdea28594990b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "danilopacheco-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-025a97859cfd93ab1",
            "private_dns": "ip-172-31-9-35.us-east-2.compute.internal",
            "private_ip": "172.31.9.35",
            "public_dns": "ec2-3-145-8-212.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.8.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e8a9e88ab155a060",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "estudo-acesso-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7e389615",
            "tags": {
              "name": "dev7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06071ebae5720cddc"
            ]
          },
          "dependencies": [
            "aws_security_group.estudo-acesso-ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "estudo-acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333264324944:security-group/sg-03a49bcc3420812c2",
            "description": "estudo-acesso-ssh",
            "egress": [],
            "id": "sg-03a49bcc3420812c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "163.116.224.115/32",
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "estudo-acesso-ssh",
            "name_prefix": null,
            "owner_id": "333264324944",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c5ce60b8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "estudo-acesso-ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:333264324944:security-group/sg-06071ebae5720cddc",
            "description": "estudo-acesso-ssh",
            "egress": [],
            "id": "sg-06071ebae5720cddc",
            "ingress": [
              {
                "cidr_blocks": [
                  "163.116.224.115/32",
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "estudo-acesso-ssh",
            "name_prefix": null,
            "owner_id": "333264324944",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c62e467"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}